(update) html files

--- a/zerocoder/main/templates/main/index.html
+++ b/zerocoder/main/templates/main/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Первая страница на Django</title>
-</head>
-<body>
-<h2>Урок номер 2 по изучению фреймворка Django</h2>
-</body>
-</html>
+{% extends 'main/layout.html' %}
+
+{% block title %}
+<title>Три закона робототехники</title>
+{% endblock %}
+
+{% block content%}
+<h5>Добро пожаловать на сайт {{caption}}!</h5>
+
+<hr class="my-4">
+<p>Три закона робототехники, предложенные Айзеком Азимовым, являются основой для многих его научно-фантастических
+    произведений. Эти законы были впервые сформулированы в его рассказе "Хоровод" (1942).</p>
+<p>Эти законы поднимают важные вопросы этики и безопасности в робототехнике и искусственном интеллекте. В произведениях
+    Азимова законы часто приводят к сложным и неожиданным ситуациям, которые служат для исследования этических и
+    философских вопросов.</p>
+<p>Хотя законы Азимова являются вымышленными, они оказали влияние на реальное развитие робототехники и искусственного
+    интеллекта. Они часто обсуждаются в контексте разработки этических принципов для современных и будущих роботов и
+    ИИ.
+</p>
+<hr class="my-4">
+<h5>Присоединяйтесь к нам и станьте частью нашего дружного сообщества. Мы рады всем, кто любит учиться новому и делиться
+    своими знаниями!</h5>
+{% endblock %}
