(update) html files

--- a/zerocoder/main/templates/main/page3.html
+++ b/zerocoder/main/templates/main/page3.html
@@ -1,7 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% block title %}
-<title>Третий закон робототехники</title>
+<title>{{title}}</title>
 {% endblock %}
 
 {% block content%}
