--- a/zerocoder/main/templates/main/index.html
+++ b/zerocoder/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% block title %}
-<title>Три закона робототехники</title>
+<title>{{title}}</title>
 {% endblock %}
 
 {% block content%}
