--- a/zerocoder/main/templates/main/index.html
+++ b/zerocoder/main/templates/main/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content%}
-<h5>Добро пожаловать на сайт {{caption}}!</h5>
+<h5>Добро пожаловать на сайт «{{caption}}»!</h5>
 
 <hr class="my-4">
 <p>Три закона робототехники, предложенные Айзеком Азимовым, являются основой для многих его научно-фантастических
